# Capstone

./: CMakeLists.txt  README.md
src/: gallery.cpp  gallery.h  main.cpp  major.cpp  major.h  message_queue.cpp  message_queue.h  museum.cpp  museum.h  painter.cpp  painter.h
